# GriffinDK

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CleanFiles.bat  CompileEngine.bat  GenerateProjectFiles.bat  GenerateSolution.bat  LICENSE  README.md  build_engine_project.lua  build_samples_project.lua  clear.bat  engine_setup.lua  genie.lua  premake5.lua
Engine/: CMakeLists.txt  premake5.lua
Engine/Core/GfCore/: premake5.lua
Engine/Core/GfCore/Common/: GfBitMask.h  GfConfig.h  GfCore.h  GfCoreMinimal.h  GfDebug.cpp  GfDebug.h  GfMaths.h  GfMemoryBase.h  GfPlatform.h  GfSingleton.h  GfStl.h  GfTime.h  GfTypes.h
Engine/Core/GfCore/x64(Dx12)/: GfCore_Platform.h  GfTime_Platform.inl
Engine/Core/GfCore/x64(Vulkan)/: GfMemoryBase_Platform.inl
Engine/Core/GfEntry/x64(Vulkan)/: GfEntry_Platform.h
Engine/Core/GfFile/: premake5.lua
Engine/Core/GfFile/Common/: GfFile.cpp  GfFile.h
Engine/Core/GfFile/x64(Dx12)/: GfFile_Platform.cpp  GfFile_Platform.h
Engine/Core/GfFile/x64(Vulkan)/: GfFile_Platform.cpp  GfFile_Platform.h
Engine/Core/GfInput/: premake5.lua
Engine/Core/GfInput/Common/: GfInput.cpp  GfInput.h  GfKeyboard.cpp  GfKeyboard.h  GfMouse.cpp  GfMouse.h
Engine/Core/GfInput/x64(Vulkan)/: GfInput_Platform.cpp  GfInput_Platform.h
Engine/Core/GfMemory/: premake5.lua
Engine/Core/GfMemory/Common/: GfMemory.h  GfMemoryBase.h  GfMemoryShared.h  GfRAII.h  GfStackAllocator.cpp  GfStackAllocator.h  GfStackAllocator.inl
Engine/Core/GfMemory/x64(Vulkan)/: GfMemoryBase_Platform.inl  GfMemoryShared_Platform.inl
Engine/Core/GfRender/: premake5.lua
Engine/Core/GfRender/Common/: GfBuffer.cpp  GfBuffer.h  GfCamera.cpp  GfCamera.h  GfCmdBuffer.cpp  GfCmdBuffer.h  GfCmdBufferFactory.cpp  GfCmdBufferFactory.h  GfGraphicResources.cpp  GfGraphicResources.h  GfGraphicsSDK.h  GfMatParamLayout.cpp  GfMatParamLayout.h  GfMaterial.cpp  GfMaterial.h  GfMaterialInstance.h  GfMaterialParamLayout.cpp  GfMaterialParamLayout.h  GfMaterialParameterBlock.cpp  GfMaterialParameterBlock.h  GfMaterialShared.cpp  GfMaterialShared.h  GfMaterialinstance.cpp  GfRender.h  GfRenderCommon.h  GfRenderConstants.h  GfRenderContext.cpp  GfRenderContext.h  GfRenderPass.cpp  GfRenderPass.h  GfWindow.cpp  GfWindow.h
Engine/Core/GfRender/Common/GraphicResources/: GfBuffer.cpp  GfBuffer.h  GfConstantBuffer.cpp  GfConstantBuffer.h  GfGraphicResourceBase.cpp  GfGraphicResourceBase.h  GfGraphicResources.h  GfGraphicResourcesShared.h  GfSamplerState.cpp  GfSamplerState.h  GfTexture.cpp  GfTexture.h  GfTexture.inl  GfTexture2D.cpp  GfTexture2D.h  GfTextureView.cpp  GfTextureView.h
Engine/Core/GfRender/x64(Vulkan)/: GfBuffer_Platform.cpp  GfBuffer_Platform.h  GfCmdBufferFactory_Platform.cpp  GfCmdBufferFactory_Platform.h  GfCmdBuffer_Platform.cpp  GfCmdBuffer_Platform.h  GfGraphicResources_Platform.cpp  GfGraphicResources_Platform.h  GfMatParamLayout_Platform.cpp  GfMatParamLayout_Platform.h  GfMaterialInstance_Platform.cpp  GfMaterialInstance_Platform.h  GfMaterialParamLayout_Platform.cpp  GfMaterialParamLayout_Platform.h  GfMaterialParameterBlock_Platform.cpp  GfMaterialParameterBlock_Platform.h  GfMaterialShared_Platform.inl  GfMaterial_Platform.cpp  GfMaterial_Platform.h  GfRenderCommon_Platform.inl  GfRenderContext_Platform.cpp  GfRenderContext_Platform.h  GfRenderPass_Platform.cpp  GfRenderPass_Platform.h  GfRender_Platform.h  GfWindow_Platform.cpp  GfWindow_Platform.h
Engine/Core/GfRender/x64(Vulkan)/GraphicResources/: GfBuffer_Platform.cpp  GfBuffer_Platform.h  GfTexture2D.cpp  (+11 more)
Engine/Src/Common/GfCore/: GfCommandLine.cpp  GfCommandLine.h  GfConfig.h  GfCore.h  GfCoreMinimal.h  GfDebug.cpp  GfDebug.h  GfHash.cpp  GfHash.h  GfMaths.h  GfPaths.cpp  GfPaths.h  GfPlatform.h  GfStl.h  GfStl.inl  GfThreading.h  GfTime.h  GfTypes.h  GfUnits.h
Engine/Src/Common/GfEntry/: GfEntry.h
Engine/Src/Common/GfFile/: GfFile.cpp  GfFile.h
Engine/Src/Common/GfInput/: GfInput.cpp  GfInput.h  GfKeyboard.cpp  GfKeyboard.h  GfMouse.cpp  GfMouse.h
Engine/Src/Common/GfMemory/: GfAllocators.cpp  GfAllocators.h  GfLinearAllocator.h  GfMemory.h  GfMemoryBase.h  GfRAII.h  GfStackAllocator.h
Engine/Src/Common/GfRender/: GfCamera.cpp  GfCamera.h  GfCmdBuffer.cpp  GfCmdBuffer.h  GfCmdBufferFactory.cpp  GfCmdBufferFactory.h  GfGraphicsSDK.h  GfMatParamLayout.cpp  GfMatParamLayout.h  GfMaterial.cpp  GfMaterial.h  GfMaterialShared.cpp  GfMaterialShared.h  GfRender.h  GfRenderCommon.h  GfRenderConstants.h  GfRenderContext.cpp  GfRenderContext.h  GfRenderPass.cpp  GfRenderPass.h  GfShaderPipeline.cpp  GfShaderPipeline.h  GfWindow.cpp  GfWindow.h
Engine/Src/Common/GfShaderCompiler/: GfShaderCache.cpp  GfShaderCache.h  GfShaderCompiler.cpp  GfShaderCompiler.h
Engine/Src/Vulkan/GfRender/: GfCmdBufferFactory_Platform.cpp  GfCmdBufferFactory_Platform.h  GfCmdBuffer_Platform.cpp  GfCmdBuffer_Platform.h  GfGraphicsSDK_Platform.h  GfMatParamLayout_Platform.cpp  GfMatParamLayout_Platform.h  GfMaterial_Platform.cpp  GfMaterial_Platform.h  GfRenderCommon_Platform.inl  GfRenderContext_Platform.cpp  GfRenderContext_Platform.h  GfRenderPass_Platform.cpp  GfRenderPass_Platform.h  GfShaderPipeline_Platform.cpp  GfShaderPipeline_Platform.h  GfWindow_Platform.cpp  GfWindow_Platform.h
Engine/Src/Win64/GfEntry/: GfEntry.cpp  GfEntry_Platform.h
Engine/Src/Win64/GfFile/: GfFile_Platform.cpp
Engine/Src/Win64/GfInput/: GfInput_Platform.cpp  GfInput_Platform.h
Engine/Src/Win64/GfMemory/: GfMemoryBase_Platform.inl
Engine/Testing/QuickTesting/: premake5.lua
Engine/Testing/QuickTesting/Common/: main.cpp
Engine/Tools/GfMaterialCompiler/: premake5.lua
Engine/Tools/GfMaterialCompiler/Common/: GfMaterialCompiler.cpp  GfMaterialCompiler.h
Workspace/QuickTesting/: CMakeLists.txt  premake5.lua
Workspace/QuickTesting/Common/: TestApp.cpp  TestApp.h  main.cpp
Workspace/QuickTesting/assets/shaders/: triangle.gfsl
Workspace/QuickTesting/src/: GfMesh.cpp  GfMesh.h  TestApp.cpp  TestApp.h  main.cpp
Workspace/TestShaderCompiler/: CMakeLists.txt
Workspace/TestShaderCompiler/src/: TestApp.cpp  TestApp.h  TestCompiler.gfsl
(+278 files in other folders)
